2020-07-07  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add a man page
	* Replace code deprecated in Qt 5.15

2020-04-18  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault in categories comparison report with payee and
	  quantity properties are hidden

2020-04-13  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix monthly recurrence with end date (or occurrence count),
	  when year of end date and start date differs
	* Expand parent category after creation of new sub category
	* Fix segfault when opening file after creating a new sub category

2020-03-20  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix order of transactions in ledger when split transaction has same
	  date as single transaction

2020-02-04  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not change account group when type is selected if custom group is
	  set

2019-09-01  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault when editing a scheduled transaction (primarily with
	  current date) present in the expenses, incomes and/or transfers view

2019-08-24  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Make it possible to select multiple categories, tags, accounts,
	  descriptions, and payees/payers in categories and report

2019-08-19  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to display absolute values instead of percent in pie chart

2019-08-17  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Security quotes import and export, in quotes dialog
	* Ctrl + Home shortcut in date fields, and Home shortcut and context
	  menu item in calendar popup, for current date selection

2019-08-13  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix set single transaction in edit widget for transaction with
	  multiple accounts/payments and multiple currencies

2019-08-06  Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Save import CSV settings as presets
	* Show name with parent name for categories in CSV import dialog
