@@ -1,3 +1,9 @@
+2020-07-26  Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix recurrence on day of year
+	* Stop after 100 years when searching for previous or next monthly occurrence
+	* Remove fifth last week of month option
+
 2020-07-07  Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Add a man page
